changed tabs names and removed the fab because we are not going to use it.

--- a/app/src/main/res/layout/calendar_fragment.xml
+++ b/app/src/main/res/layout/calendar_fragment.xml
@@ -53,6 +53,7 @@
             android:id="@+id/staticTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="35dp"
             android:text="@string/staticText"
             android:textAlignment="center"
             android:textSize="30sp" />
