--- a/app/src/main/res/layout/planning_activity.xml
+++ b/app/src/main/res/layout/planning_activity.xml
@@ -28,6 +28,7 @@
             android:layout_gravity="center"
             android:adjustViewBounds="false"
             android:cropToPadding="false"
+            android:onClick="CallNamingDialog"
             android:padding="8dp"
             app:srcCompat="@android:drawable/ic_menu_add" />
     </LinearLayout>
